syntax = "proto3";
option java_package = "com.mogujie.tt.protobuf";
option optimize_for = LITE_RUNTIME;

//错误码
enum Pb_Error 
{
Pb_ERROR_MEET_INTERFACE_NULL= 0;  //操作成功，或者数据为空，视操作请求定
Pb_ERROR_MEET_INTERFACE_NOTINIT= -1; //未初始化
Pb_ERROR_MEET_INTERFACE_MEMORY = -2; //内存分配失败
Pb_ERROR_MEET_INTERFACE_NOSPPORTTYPE=  -3; //不支持的请求
Pb_ERROR_MEET_INTERFACE_NOSPPORTMETHOD=  -4; //不支持的请求方法
Pb_ERROR_MEET_INTERFACE_DOWNLOAD=  -5; //下载失败
Pb_ERROR_MEET_INTERFACE_NETSEND =-6; //发送失败
Pb_ERROR_MEET_INTERFACE_NOREADY =-7; //数据未准备好,可能正在等待数据返回
Pb_ERROR_MEET_INTERFACE_NOFIND= -8; //找不到
Pb_ERROR_MEET_INTERFACE_NOSPPORTPROPERTY= -9; //不支持的属性
Pb_ERROR_MEET_INTERFACE_UPPONMAXVALUE= -10; //超过最大值
Pb_ERROR_MEET_INTERFACE_ZERO= -11; //个数为0
Pb_ERROR_MEET_INTERFACE_PARAMETER =-12; //参数错误
Pb_ERROR_MEET_INTERFACE_DATA= -13; //数据错误
}

////数据后台回复的错误信息
enum Pb_DB_StatusCode
{
Pb_STATUS_MULTIRECORD=0;		  //多条查询记录
Pb_STATUS_SINGLERECORDD=1;	  //单条查询记录
Pb_STATUS_NORECORED=2;		  //无返回记录
Pb_STATUS_DONE=3;			  //操作成功
Pb_STATUS_FAIL=4;			  //请求失败
Pb_STATUS_EXCPT_DB=5;		//数据库异常
Pb_STATUS_EXCPT_SV=6;		//服务器异常
Pb_STATUS_ACCESSDENIED=7;	//权限限制
Pb_STATUS_PSWFAILED=8;		//密码错误
Pb_STATUS_COLL_MEETING=9;		//创建会议有冲突		
}
	
//操作类型
enum Pb_Type 
{
Pb_TYPE_MEET_INTERFACE_INITENV=0; //初始化环境
Pb_TYPE_MEET_INTERFACE_TIME=1; //平台时间 -- 高频回调
Pb_TYPE_MEET_INTERFACE_READY= 2; //平台初始化完毕
Pb_TYPE_MEET_INTERFACE_DOWNLOAD=3;//平台下载 -- 高频回调
Pb_TYPE_MEET_INTERFACE_UPLOAD=4;//平台上传 -- 高频回调
Pb_TYPE_MEET_INTERFACE_MEDIAPLAYPOSINFO=5;//平台播放进度通知 -- 高频回调
Pb_TYPE_MEET_INTERFACE_DEVICEINFO=6;//设备
Pb_TYPE_MEET_INTERFACE_DEFAULTURL=7;//会议网页
Pb_TYPE_MEET_INTERFACE_ADMIN	=8; //管理员
Pb_TYPE_MEET_INTERFACE_DEVICECONTROL=9; //设备控制
Pb_TYPE_MEET_INTERFACE_PEOPLE= 10;//常用人员信息
Pb_TYPE_MEET_INTERFACE_MEMBER= 11;//参会人员信息
Pb_TYPE_MEET_INTERFACE_MEMBERGROUP= 12;//参会人员分组
Pb_TYPE_MEET_INTERFACE_MEMBERGROUPITEM= 13;//参会人员分组人员
Pb_TYPE_MEET_INTERFACE_DEVICEFACESHOW= 14;//设备会议信息
Pb_TYPE_MEET_INTERFACE_ROOM= 15;//会场
Pb_TYPE_MEET_INTERFACE_ROOMDEVICE= 16;//会场设备
Pb_TYPE_MEET_INTERFACE_FILEPUSH= 17;//文件推送
Pb_TYPE_MEET_INTERFACE_REQUESTSTREAMPUSH= 18;//流请求推送
Pb_TYPE_MEET_INTERFACE_STREAMPUSH= 19;//流推送
Pb_TYPE_MEET_INTERFACE_MEETINFO= 20;//会议信息
Pb_TYPE_MEET_INTERFACE_MEETAGENDA= 21;//会议议程
Pb_TYPE_MEET_INTERFACE_MEETBULLET= 22;//会议公告
Pb_TYPE_MEET_INTERFACE_MEETDIRECTORY= 23;//会议目录
Pb_TYPE_MEET_INTERFACE_MEETDIRECTORYFILE= 24;//会议目录文件
Pb_TYPE_MEET_INTERFACE_MEETDIRECTORYRIGHT= 25;//会议目录权限
Pb_TYPE_MEET_INTERFACE_MEETVIDEO= 26;//会议视频
Pb_TYPE_MEET_INTERFACE_MEETTABLECARD= 27;//会议双屏显示
Pb_TYPE_MEET_INTERFACE_MEETSEAT= 28;//会议排位
Pb_TYPE_MEET_INTERFACE_MEETIM= 29;//会议交流
Pb_TYPE_MEET_INTERFACE_MEETONVOTING= 30;//会议发起投票
Pb_TYPE_MEET_INTERFACE_MEETVOTEINFO=31;//会议投票信息
Pb_TYPE_MEET_INTERFACE_MEETVOTESIGNED=32;//会议投票人信息
Pb_TYPE_MEET_INTERFACE_MANAGEROOM=33;//会议管理会场
Pb_TYPE_MEET_INTERFACE_MEETSIGN=34;//会议签到
Pb_TYPE_MEET_INTERFACE_WHITEBOARD=35;//会议白板
Pb_TYPE_MEET_INTERFACE_FUNCONFIG= 36;//会议功能配置
Pb_TYPE_MEET_INTERFACE_MEMBERPERMISSION= 37;//参会人员权限信息
Pb_TYPE_MEET_INTERFACE_PEOPLEGROUP= 38;//常用人员分组
Pb_TYPE_MEET_INTERFACE_PEOPLEGROUPITEM= 39;//常用人员分组人员
Pb_TYPE_MEET_INTERFACE_SCREENMOUSECONTROL= 40;//屏幕鼠标控制
Pb_TYPE_MEET_INTERFACE_SCREENKEYBOARDCONTROL= 41;//屏幕键盘控制
Pb_TYPE_MEET_INTERFACE_DEVICEMEETSTATUS= 42;//设备当前会议的一些信息
Pb_TYPE_MEET_INTERFACE_DEVICEOPER= 43;//设备交互信息
Pb_TYPE_MEET_INTERFACE_DBSERVERERROR=44; //数据库后台回复错误信息
Pb_TYPE_MEET_INTERFACE_MEDIAPLAY= 45;//媒体播放
Pb_TYPE_MEET_INTERFACE_STREAMPLAY=46;//流播放
Pb_TYPE_MEET_INTERFACE_STOPPLAY=47;//流播放
Pb_TYPE_MEET_INTERFACE_MEMBERCOLOR= 48;//参会人员白板颜色
Pb_TYPE_MEET_INTERFACE_MEETCONTEXT= 49;//上下文
Pb_TYPE_MEET_INTERFACE_MEETCLEAR= 50;//缓存清理,清空所有缓存,其它类型也支持单独
Pb_TYPE_MEET_INTERFACE_MEETSTATISTIC= 51;//会议统计
Pb_TYPE_MEET_INTERFACE_MEETFACECONFIG= 52;//界面配置
Pb_TYPE_MEET_INTERFACE_MEETSENDMAIL= 53;//邮件发送
Pb_TYPE_MEET_INTERFACE_FILESCORE=     54;    //会议文件评分相关
Pb_TYPE_MEET_INTERFACE_FILEEVALUATE=  55;  //会议文件评价相关
Pb_TYPE_MEET_INTERFACE_MEETEVALUATE = 56;   //会议评价相关
Pb_TYPE_MEET_INTERFACE_SYSTEMLOG=     57; //管理员操作日志相关

 }

 //操作方法
enum Pb_Method 
{
Pb_METHOD_MEET_INTERFACE_ZERO=0; //不使用
Pb_METHOD_MEET_INTERFACE_QUERY=  1;
Pb_METHOD_MEET_INTERFACE_ADD	=	2;
Pb_METHOD_MEET_INTERFACE_MODIFY= 3;
Pb_METHOD_MEET_INTERFACE_DEL	=	4;
Pb_METHOD_MEET_INTERFACE_SET	=	6;
Pb_METHOD_MEET_INTERFACE_GETSIZE=7;
Pb_METHOD_MEET_INTERFACE_NOTIFY= 8;
Pb_METHOD_MEET_INTERFACE_CLEAR=  9;
Pb_METHOD_MEET_INTERFACE_LOGON=  10;
Pb_METHOD_MEET_INTERFACE_PUSH=11;
Pb_METHOD_MEET_INTERFACE_ASK= 12;
Pb_METHOD_MEET_INTERFACE_REJECT= 13;
Pb_METHOD_MEET_INTERFACE_EXIT=   14;
Pb_METHOD_MEET_INTERFACE_OPEN=   15;
Pb_METHOD_MEET_INTERFACE_CLOSE=  16;
Pb_METHOD_MEET_INTERFACE_ENTER=  17;
Pb_METHOD_MEET_INTERFACE_PAGEQUERY=  18;
Pb_METHOD_MEET_INTERFACE_MODIFYNAME= 19;
Pb_METHOD_MEET_INTERFACE_MODIFYINFO= 20;
Pb_METHOD_MEET_INTERFACE_MODIFYSTATUS= 21;
Pb_METHOD_MEET_INTERFACE_SINGLEQUERYBYID=  22;
Pb_METHOD_MEET_INTERFACE_SINGLEQUERYBYNAME=23;
Pb_METHOD_MEET_INTERFACE_CONTROL=24;
Pb_METHOD_MEET_INTERFACE_SAVE=25;
Pb_METHOD_MEET_INTERFACE_REFRESH=26;
Pb_METHOD_MEET_INTERFACE_COMPLEXQUERY=  27; //复合查询
Pb_METHOD_MEET_INTERFACE_COMPLEXPAGEQUERY=  28; //复合按页查询
Pb_METHOD_MEET_INTERFACE_START=29;
Pb_METHOD_MEET_INTERFACE_STOP=30;
Pb_METHOD_MEET_INTERFACE_PLAY=31;
Pb_METHOD_MEET_INTERFACE_PAUSE=32;
Pb_METHOD_MEET_INTERFACE_MOVE=33;
Pb_METHOD_MEET_INTERFACE_ZOOM=34 ;//缩放操作
Pb_METHOD_MEET_INTERFACE_BACK=35; //
Pb_METHOD_MEET_INTERFACE_REQUEST=36; //
Pb_METHOD_MEET_INTERFACE_BROADCAST=37; //
Pb_METHOD_MEET_INTERFACE_QUERYPROPERTY=38; //查询属性
Pb_METHOD_MEET_INTERFACE_SETPROPERTY=39; //设置属性
Pb_METHOD_MEET_INTERFACE_DUMP=40; //复制
Pb_METHOD_MEET_INTERFACE_REQUESTPUSH=41; //询问推送
Pb_METHOD_MEET_INTERFACE_DELALL	=	42;
Pb_METHOD_MEET_INTERFACE_SEND	=	43;
Pb_METHOD_MEET_INTERFACE_DETAILINFO	=	44;
Pb_METHOD_MEET_INTERFACE_INIT	=	45;
Pb_METHOD_MEET_INTERFACE_DESTORY	=	46;
Pb_METHOD_MEET_INTERFACE_MAKEVIDEO	=	47;
Pb_METHOD_MEET_INTERFACE_SUBMIT	=	48;
Pb_METHOD_MEET_INTERFACE_PUBLIST	=	49;
Pb_METHOD_MEET_INTERFACE_CACHE	=	50; //缓存
Pb_METHOD_MEET_INTERFACE_CHILDRED	=	51; //子级数据
Pb_METHOD_MEET_INTERFACE_ALLCHILDRED=52; //所有子级数据
Pb_METHOD_MEET_INTERFACE_RESPONSE=   53; //
Pb_METHOD_MEET_INTERFACE_REQUESTTOMANAGE=   54; //请求管理员
Pb_METHOD_MEET_INTERFACE_RESPONSETOMANAGE=   55; //回复请求管理员
Pb_METHOD_MEET_INTERFACE_REQUESTPRIVELIGE=   56; //请求参会人员权限
Pb_METHOD_MEET_INTERFACE_RESPONSEPRIVELIGE=   57; //回复请求参会人员权限
Pb_METHOD_MEET_INTERFACE_UPDATE=   58; //更新、升级
Pb_METHOD_MEET_INTERFACE_TEXTMSG=   59; //文本消息
Pb_METHOD_MEET_INTERFACE_REBOOT=    60; //重启
Pb_METHOD_MEET_INTERFACE_RESINFO=   61; //播放资源信息

Pb_METHOD_MEET_INTERFACE_ADDINK=1001; //添加INK
Pb_METHOD_MEET_INTERFACE_ADDRECT=1002; //添加矩形、直线、圆形
Pb_METHOD_MEET_INTERFACE_ADDTEXT=1003;//添加文本
Pb_METHOD_MEET_INTERFACE_ADDPICTURE=1004;//添加图片
}

//字符串长度限制
enum Pb_String_LenLimit 
{
option allow_alias = true;
Pb_STRING_LIMIT_ZERO=0; //不使用
Pb_MAX_DEVICEIPADDR_NUM=2;//设备最大的IP地址信息数
Pb_MAX_RES_NUM=6;//设备最大的资源数
Pb_MEET_MAX_VOTENUM=6;//最大的投票项数
Pb_SIGNIN_PSW_LEN= 16; //签到密码长度
Pb_MEET_MD5_ASCILL_MAXLEN=32;//密码 (ascill/md5ascill)
Pb_FONTNAME_LENG=48;//默认字体名称长度
Pb_DEFAULT_NAME_MAXLEN=48;//默认名称长度
Pb_MEET_NAME_MAXLE=100;//用户名长度
Pb_DEFAULT_DESCRIBE_LENG=100;//默认描述字符串长度
Pb_DEFAULT_SHORT_DESCRIBE_LENG =40;//默认描述字符串长度
Pb_DEFAULT_PASSWORD_LENG=40; //默认密码长度
Pb_DEVICE_NAME_MAXLEN=128;//设备名称长席
Pb_DEVICE_IPADDR_MAXLEN=64;//IP地址长度
Pb_DEFAULT_FILENAME_LENG=150;//默认文件名长度
Pb_MEET_PATH_MAXLEN=260;//默认文件路径长度
Pb_MEET_PATHNAME_MAXLEN=260;//默认文件路径长度
Pb_MEET_MEMBERSTRING_MAXLEN=260;//参会人员属性字符串长度
Pb_MEET_DEVICESTRING_MAXLEN=260;//设备属性字符串长度
Pb_MAX_SYSTEMLOG_TEXTLEN= 260; //记录文本最大长度
Pb_MAX_EVALUATETEXTLEN= 260; //评价的文本最大长度
Pb_MEETIM_CHAR_MSG_MAXLEN= 300;//聊天文本长度
Pb_MEETAGENDA_DESCTEXT_LENG=320;//时间轴式会议议程长度
Pb_DEFAULT_BULLETCONTENT_LENG=320;//会议公告长度
Pb_MEET_URL_MAXLEN=1024;//网址长度
}

//程序类型
enum Pb_ProgramType
{
Pb_MEET_PROGRAM_TYPE_ZERO = 0;
Pb_MEET_PROGRAM_TYPE_MEETCLIENT=	 1; //会议终端软件
Pb_MEET_PROGRAM_TYPE_PROJECTIVE=	 2; //投影软件
Pb_MEET_PROGRAM_TYPE_STREAMCAPTURE=  3; //流采集软件
Pb_MEET_PROGRAM_TYPE_SERVICE=		 4; //茶水服务软件
Pb_MEET_PROGRAM_TYPE_ANDROIDAPP=	 5; //android APP
}

//缓存数据
enum Pb_CacheFlag 
{
Pb_MEET_CACEH_FLAG_ZERO=0;
Pb_MEET_CACEH_FLAG_FORCE=	     0x00000001; //强制缓存
}

//font align flag 字体对齐方式
enum Pb_FontAlignFlag 
{
Pb_MEET_FONTALIGNFLAG_ZERO=0;
Pb_MEET_FONTALIGNFLAG_LEFT=			0x0001; //左对齐
Pb_MEET_FONTALIGNFLAG_RIGHT=			0x0002; //右对齐
Pb_MEET_FONTALIGNFLAG_HCENTER=		0x0004; //水平对齐
Pb_MEET_FONTALIGNFLAG_TOP=			0x0008; //上对齐
Pb_MEET_FONTALIGNFLAG_BOTTOM=		0x0010; //下对齐
Pb_MEET_FONTALIGNFLAG_VCENTER=		0x0020; //垂直对齐
}

//设备播放状态
enum Pb_DevicePlayStatus 
{
Pb_DEVICE_PLAYSTATUS_IDLE=0; //空闲
Pb_DEVICE_PLAYSTATUS_MEDIA=1;//播放媒体 
Pb_DEVICE_PLAYSTATUS_STREAM=2;//播放流
Pb_DEVICE_PLAYSTATUS_TALK=3;//对讲
}

//会议客户端软件的界面
enum Pb_MeetFaceStatus
{
Pb_MemState_MainFace=0; //处于主界面
Pb_MemState_MemFace=1;//参会人员界面
Pb_MemState_AdminFace=2;//后台管理界面
}

//property id
//会议设备属性ID
enum Pb_MeetDevicePropertyID
{
Pb_MEETDEVICE_PROPERTY_ZERO=0;
Pb_MEETDEVICE_PROPERTY_NAME=1; //设备名称 query(text)
Pb_MEETDEVICE_PROPERTY_IPADDR=2;		 //ip地址 query(text) paramterval(ip地址索引)
Pb_MEETDEVICE_PROPERTY_PORT=3;				 //网络端口 query(fixed32)
Pb_MEETDEVICE_PROPERTY_NETSTATUS=4;			 //网络状态 query(fixed32)
Pb_MEETDEVICE_PROPERTY_PLAYSTATUS=5;			 //播放状态(propertyval2(triggerid), propertyval3(val),propertyval4(val2)有效) query(fixed32) paramterval(res地址索引)
Pb_MEETDEVICE_PROPERTY_FACESTATUS=6;		 //界面状态 query(fixed32)
Pb_MEETDEVICE_PROPERTY_MEMBERID=7;			 //当前参会人员ID query(fixed32)
Pb_MEETDEVICE_PROPERTY_MEETINGID=8;		 //当前会议ID query(fixed32)
Pb_MEETDEVICE_PROPERTY_TRIGGERID=9;			 //当前正在执行的触发器ID query(fixed32) paramterval(res地址索引)
Pb_MEETDEVICE_PROPERTY_STREAMNAME=10;			 //设备的流通道名称 query paramterval=查询的流通道号(text)
}

//设备修改标志位 modflag
enum Pb_DeviceModifyFlag 
{
Pb_DEVICE_MODIFYFLAG_ZERO=0;
Pb_DEVICE_MODIFYFLAG_NAME=		0x00000001;
Pb_DEVICE_MODIFYFLAG_IPADDR=	0x00000002;
Pb_DEVICE_MODIFYFLAG_PORT=		0x00000004;
Pb_DEVICE_MODIFYFLAG_LIFTRES=   0x00000008;
}

//会议上下文属性ID
//property id
enum Pb_ContextPropertyID 
{
Pb_MEETCONTEXT_PROPERTY_ZERO=0;
Pb_MEETCONTEXT_PROPERTY_ROLE=				1; //当前会议的角色 set/query(fixed32)
Pb_MEETCONTEXT_PROPERTY_CURADMINID=			2; //当前会议登陆的管理员ID query(fixed32)
Pb_MEETCONTEXT_PROPERTY_CURADMINNAME=		3; //当前会议登陆的管理员用户名 query(fixed32)
Pb_MEETCONTEXT_PROPERTY_CURADMINPASSWORD=	4; //当前会议登陆的管理员密码 md5 query(text)
Pb_MEETCONTEXT_PROPERTY_HASTABLECARD=		5; //当前会议是否是双屏 set/query(fixed32)
Pb_MEETCONTEXT_PROPERTY_CURMEETINGID=		6; //当前会议的会议ID set/query(fixed32)
Pb_MEETCONTEXT_PROPERTY_SELFID=				7; //本机设备ID query(fixed32)
Pb_MEETCONTEXT_PROPERTY_CURROOMID=			8; //当前会议的会场ID query(fixed32)
Pb_MEETCONTEXT_PROPERTY_SELFMEMBERID=		9; //当前会议的绑定的参会人员ID query(fixed32)
Pb_MEETCONTEXT_PROPERTY_MEETDBDEVICEID=		10; //当前会议数据库设备ID query(fixed32)
Pb_MEETCONTEXT_PROPERTY_SCREENSTREAMINDEX=	11; //本机屏幕流通道号 query(fixed32)
}

//会议议程
//agendatype
enum Pb_AgendaType 
{
Pb_MEET_AGENDA_TYPE_TEXT= 0; //文本 val=文本长度
Pb_MEET_AGENDA_TYPE_FILE= 1; //文件 val=媒体ID
Pb_MEET_AGENDA_TYPE_TIME= 2; //时间轴式 val=Item_AgendaTimeInfo个数
}

//时间轴式会议议程
enum Pb_AgendaStatus
{
Pb_MEETAGENDA_STATUS_IDLE=		0; //未发起
Pb_MEETAGENDA_STATUS_RUNNING=   1; //进行中
Pb_MEETAGENDA_STATUS_END=		2; //已结束
}

//管理员登陆状态
enum Pb_AdminLogonStatus
{
Pb_ADMINLOGON_ERR_NONE =0; //登陆成功
Pb_ADMINLOGON_ERR_PSW=  1; //密码错误
Pb_ADMINLOGON_ERR_EXCPT_SV=  2; //服务器异常
Pb_ADMINLOGON_ERR_EXCPT_DB=  3; //数据库异常
}

//终端控制
//oper
enum Pb_DeviceControlFlag
{
Pb_DEVICECONTORL_ZERO=0;
Pb_DEVICECONTORL_SHUTDOWN= 1; //关机
Pb_DEVICECONTORL_REBOOT=  2; //重启
Pb_DEVICECONTORL_PROGRAMRESTART=  3; //重启软件
Pb_DEVICECONTORL_LIFTUP = 4; //升
Pb_DEVICECONTORL_LIFTDOWN = 5; //降
Pb_DEVICECONTORL_LIFTSTOP = 6; //停止升（降）
Pb_DEVICECONTORL_MODIFYLOGO = 7; //更换LOGO
Pb_DEVICECONTORL_MODIFYMAINBG = 8; //更换主界面
Pb_DEVICECONTORL_MODIFYPROJECTBG = 9; //更换投影界面
Pb_DEVICECONTORL_MODIFYSUBBG = 10; //更换子界面
Pb_DEVICECONTORL_MODIFYFONTCOLOR =11; //更换字体颜色
}

//operval1 升降控制类别标志
enum Pb_LiftFlag
{
Pb_LIFT_FLAG_ZERO=0;
Pb_LIFT_FLAG_MACHICE= 0x00000001; //选择升降机类别
Pb_LIFT_FLAG_MIC =    0x00000002;//选择升降话筒类别
}

//下载状态
//state flag
enum Pb_Download_State
{
Pb_STATE_MEDIA_DOWNLOAD_IDLE=	  0; //空闲
Pb_STATE_MEDIA_DOWNLOAD_WORKING=  1; //下载中
Pb_STATE_MEDIA_DOWNLOAD_FINISH=   2; //下载结束
Pb_STATE_MEDIA_DOWNLOAD_ERROR =   3; //下载错误
Pb_STATE_MEDIA_DOWNLOAD_EXIT  =   4; //下载退出
Pb_STATE_MEDIA_DOWNLOAD_DESTROY = 5; //下载释放资料
}

//执行事件时指定的触发器标志
//triggerusedef
enum Pb_TriggerUsedef
{
Pb_EXCEC_USERDEF_FLAG_ZERO=0;
Pb_EXCEC_USERDEF_FLAG_COMPEREOPER=0x00000001;//					//主持人操作标志
Pb_EXCEC_USERDEF_FLAG_OTHEROPER=					0x00000002;//其他参会人员操作标志
Pb_EXCEC_USERDEF_FLAG_NOCREATEWINOPER=				0x00000004;//不创建新窗口操作标志
Pb_EXCEC_USERDEF_FLAG_NOSTREAMRECORD=				0x00000008;//不保存流录音操作标志
Pb_EXCEC_USERDEF_FLAG_SCREENSHARE=					0x00000010;//同屏开启
}

//下载错误码
//ERROR 
enum Pb_Download_Erro
{
Pb_ERROR_MEDIA_DOWNLOAD_OK=			0; //正常
Pb_ERROR_MEDIA_DOWNLOAD_PARAMETER=  1; //参数不对
Pb_ERROR_MEDIA_DOWNLOAD_INITTHREAD= 2; //线程创建失败
Pb_ERROR_MEDIA_DOWNLOAD_USERSTOP=	3; //主动停止
Pb_ERROR_MEDIA_DOWNLOAD_NOMEDIA=	4; //不存在的媒体 
Pb_ERROR_MEDIA_DOWNLOAD_OPEN=		5; //打开文件失败
Pb_ERROR_MEDIA_DOWNLOAD_FILEOK=		6; //文件完整,不需要下载
Pb_ERROR_MEDIA_DOWNLOAD_CREATE=		7; //创建 文件失败
Pb_ERROR_MEDIA_DOWNLOAD_MEMORY=		8; //内存分配失败
Pb_ERROR_MEDIA_DOWNLOAD_EXECINIT=	9; //平台库初始化下载失败
Pb_ERROR_MEDIA_DOWNLOAD_SETPOS=		10; //设置下载位置失败
}


//上传文件状态
//status
enum Pb_Upload_State
{
Pb_UPLOADMEDIA_FLAG_IDLE=		0; //等待上传
Pb_UPLOADMEDIA_FLAG_UPLOADING=  1; //上传中
Pb_UPLOADMEDIA_FLAG_STOP=	    2; //停止
Pb_UPLOADMEDIA_FLAG_HADEND	=	3; //结束上传
Pb_UPLOADMEDIA_FLAG_NOSERVER=	4; //没找到可用的服务器
Pb_UPLOADMEDIA_FLAG_ISBEING=	5; //已经存在
}


//上传文件标志
//uploadflag
enum Pb_Upload_Flag
{
Pb_MEET_UPLOADFLAG_ZERO=0;
Pb_MEET_UPLOADFLAG_ONLYENDCALLBACK =0x00000001; //只能当上传结束才回调进度
}

//查询指定参会人员的某项属性
//property id
enum Pb_MemberPropertyID
{
Pb_MEETMEMBER_PROPERTY_ZERO=0;
Pb_MEETMEMBER_PROPERTY_NAME=				1; //名称 query(text)
Pb_MEETMEMBER_PROPERTY_COMPANY=				2; //公司 query(text)
Pb_MEETMEMBER_PROPERTY_JOB=					3; //身份 query(text)
Pb_MEETMEMBER_PROPERTY_COMMENT=				4; //备注 query(text)
Pb_MEETMEMBER_PROPERTY_PHONE=				5; //电话 query(text)
Pb_MEETMEMBER_PROPERTY_EMAIL=				6; //邮箱 query(text)
Pb_MEETMEMBER_PROPERTY_PASSWORD=			7; //密码 query(text)
}

//参会人权限
//property id
enum Pb_MemberPermissionPropertyID
{
Pb_memperm_zero=0;
Pb_memperm_sscreen=					0x00000001;		//同屏权限
Pb_memperm_projective=				0x00000002;		//投影权限
Pb_memperm_upload=					0x00000004;		//上传权限
Pb_memperm_download=				0x00000008;		//下载权限
Pb_memperm_vote=					0x00000010;		//投票权限
}

//----------会议签到类型----------
enum Pb_MeetSignType
{
Pb_signin_direct=	0x00;		//类型--直接签到
Pb_signin_psw=		0x01;		//类型--个人密码签到
Pb_signin_photo=	0x02;		//类型--拍照(手写)签到
Pb_signin_onepsw=	0x03;		//类型--会议密码签到
Pb_signin_onepsw_photo=	0x04;	//类型--会议密码+拍照(手写)签到
Pb_signin_psw_photo=	0x05;	//类型--个人密码+拍照(手写)签到
}

//查询会场属性信息
//property id
enum Pb_MeetRoomPropertyID
{
Pb_MEETROOM_PROPERTY_ZERO=0;
Pb_MEETROOM_PROPERTY_BGPHOTOID=			1; //按会场ID返回会场底图ID query(fixed32)
Pb_MEETSEAT_PROPERTY_MANAGERID=			2; //按会场ID返回会场管理员ID query(fixed32)
}

//direction 会场设备朝向
enum Pb_DeviceDirection
{
Pb_SEATDIRECTION_UP=	0; //朝上
Pb_SEATDIRECTION_DOWN=	1; //朝上
Pb_SEATDIRECTION_LEFT=	2; //朝左
Pb_SEATDIRECTION_RIGHT= 3; //朝右
}

//查询符合要求的设备ID  过滤标志
//filterflag
enum Pb_RoomDeviceFilterFlag
{
Pb_MEET_ROOMDEVICE_FLAG_ZERO=0;
Pb_MEET_ROOMDEVICE_FLAG_ONLINE=		0x0000001; //在线
Pb_MEET_ROOMDEVICE_FLAG_FACESTATUS= 0x0000002; //匹配会议界面状态
Pb_MEET_ROOMDEVICE_FLAG_BINDMEMBER= 0x0000004; //参会人员绑定
Pb_MEET_ROOMDEVICE_FLAG_PROJECTIVE= 0x0000008; //投影机
Pb_MEET_ROOMDEVICE_FLAG_HADSIGNIN=  0x0000010; //已经签到
Pb_MEET_ROOMDEVICE_FLAG_NOSELFID=   0x0000020; //排除本机ID
Pb_MEET_ROOMDEVICE_FLAG_NODEVID=    0x0000040; //排除指定ID
}

//会议状态
enum Pb_MeetStatus
{
Pb_MEETING_STATUS_Ready=  0;//会议创建中，等待开始
Pb_MEETING_STATUS_Start=  1;//会议开始进行中
Pb_MEETING_STATUS_End=    2;//会议结束
Pb_MEETING_STATUS_PAUSE=  3;//会议暂停
}

//查询会议属性信息
//property id
enum Pb_MeetPropertyID
{
Pb_MEET_PROPERTY_ZERO=0;
Pb_MEET_PROPERTY_SECRECY=			1; //按会议ID返回会议是否为保密会议 query(fixed32)
Pb_MEET_PROPERTY_ROOMID=			2; //按会议ID返回会议会场ID query(fixed32)
Pb_MEET_PROPERTY_SIGNINTYPE=		3; //按会议ID返回会议签到方式 query(fixed32)
Pb_MEET_PROPERTY_MANAGERID=			4; //按会议ID返回会议管理员iD query(fixed32)
Pb_MEET_PROPERTY_STATUS=			5; //按会议ID返回会议状态  query(fixed32)
Pb_MEET_PROPERTY_STARTTIME=			6; //按会议ID返回会议开始时间 query(fixed64)
Pb_MEET_PROPERTY_ENDTIME=			7; //按会议ID返回会议结束时间 query(fixed64)
}

//----------参会人员角色----------
enum Pb_MeetMemberRole
{
Pb_role_member_nouser= 		0x00;  //未使用
Pb_role_member_normal= 		0x01;  //一般参会人员
Pb_role_member_compere= 	0x03;  //主持人
Pb_role_member_secretary= 	0x04;  //秘书
Pb_role_device_projector=	0x08;  //投影仪
Pb_role_admin=				0x09;  //管理员
}

//文件attrib
enum Pb_MeetFileAttrib
{
Pb_MEETFILE_ATTRIB_ZERO=0;
Pb_MEETFILE_ATTRIB_IMPORTANTFILE= 0x000000001; //紧急文件
}

//查询指定文件的某项属性
//property id
enum Pb_MeetFilePropertyID
{
Pb_MEETFILE_PROPERTY_ZERO=0;
Pb_MEETFILE_PROPERTY_NAME=   1; //名称 query(text)
Pb_MEETFILE_PROPERTY_SIZE=	 2; //大小 query(fixed64)
Pb_MEETFILE_PROPERTY_TIME=   3; //时长 query(fixed32)
Pb_MEETFILE_PROPERTY_ATTRIB= 4; //文件attrib query(fixed32)
Pb_MEETFILE_PROPERTY_AVAILABLE=5; //文件是否可用 query(fixed32) 0:不存在 1:存在
}

//目录文件的查询标志
//queryflag
enum Pb_MeetFileQueryFlag
{
Pb_MEET_FILETYPE_QUERYFLAG_ZERO=0;
Pb_MEET_FILETYPE_QUERYFLAG_UPLOADID=		 0x00000001;  //上传者有效
Pb_MEET_FILETYPE_QUERYFLAG_FILETYPE=		 0x00000002;  //文件类型有效
Pb_MEET_FILETYPE_QUERYFLAG_ATTRIB=			 0x00000004;  //文件属性有效
Pb_MEET_FILETYPE_QUERYFLAG_IMPORTANTFRONT=	 0x00000008;  //attrib为MEETFILE_ATTRIB_IMPORTANTFILE的文件会被放在前面返回
}

//文件类型
//filetype
enum Pb_MeetFileType
{
Pb_MEET_FILETYPE_ZERO=0;
Pb_MEET_FILETYPE_AUDIO=		 0x00000001;  //音频
Pb_MEET_FILETYPE_VIDEO=		 0x00000002;  //视频
Pb_MEET_FILETYPE_PICTURE=	 0x00000004;  //图片
Pb_MEET_FILETYPE_DOCUMENT=	 0x00000008;  //文档
Pb_MEET_FILETYPE_OTHER=		 0x00000010;  //其它
}

//双屏显示类别
//type
enum Pb_TableCardType
{
Pb_conf_zero=0;
Pb_conf_mtgname=	0x01; //会议名称
Pb_conf_memname=	0x02; //参会人员名称
Pb_conf_job=		0x03; //参会人员职业
Pb_conf_company=	0x04; //参会人员单位
Pb_conf_position=	0x05; //座位名称
}

//双屏显示标志
//flag
enum Pb_TableCardFlag
{
Pb_MEET_TABLECARDFLAG_ZERO=0;
Pb_MEET_TABLECARDFLAG_SHOW=			0x00000001; //该位用于表示该项是否可见
Pb_MEET_TABLECARDFLAG_BOLD=			0x00000002; //加粗
Pb_MEET_TABLECARDFLAG_LEAN=			0x00000004; //倾斜
Pb_MEET_TABLECARDFLAG_UNDERLINE=	0x00000008; //下划线
}

//查询会议排位属性信息
//property id
enum Pb_MeetSeatPropertyID
{
Pb_MEETSEAT_PROPERTY_ZERO=0;
Pb_MEETSEAT_PROPERTY_SEATID=			1; //按人员ID返回设备ID query(fixed32)
Pb_MEETSEAT_PROPERTY_MEMBERID=			2; //按设备ID返回人员ID query(fixed32)
Pb_MEETSEAT_PROPERTY_ROLEBYMEMBERID=				3; //按人员ID返回人员role query(fixed32)
Pb_MEETSEAT_PROPERTY_ROLEBYDEVICEID=				4; //按人员ID返回人员role query(fixed32)
Pb_MEETSEAT_PROPERTY_ISCOMPEREEBYMEMBERID=		5; //按人员ID判断当前人员是不是主持人 query(fixed32)
Pb_MEETSEAT_PROPERTY_ISCOMPEREEBYDEVICEID=		6; //按设备ID判断当前人员是不是主持人 query(fixed32)
Pb_MEETSEAT_PROPERTY_MEMBERIDBYROLE=	7; //返回等于role的人员ID query(fixed32)
Pb_MEETSEAT_PROPERTY_DEVICEIDBYROLE=	8; //返回等于role的设备ID query(fixed32)
}

//会议交流信息
//type
enum Pb_MeetIMMSG_TYPE
{
Pb_MEETIM_CHAT_Message= 0; //文本消息
Pb_MEETIM_CHAT_Link= 1;	  //多媒体链接
Pb_MEETIM_CHAT_Water= 2;		//水
Pb_MEETIM_CHAT_Tea= 3;		//茶
Pb_MEETIM_CHAT_Coffee= 4;    //咖啡
Pb_MEETIM_CHAT_Pen= 5;		//笔
Pb_MEETIM_CHAT_Paper= 6;		//纸
Pb_MEETIM_CHAT_Technical= 7;//技术员
Pb_MEETIM_CHAT_Waiter= 8;//服务员
Pb_MEETIM_CHAT_Other= 9;		//其他服务
Pb_MEETIM_CHAT_Emecc= 10;	//申请主持
}

//queryflag 需要按那个查询那位置为1
enum Pb_MeetIMMSG_QueryFlag
{
Pb_COMPLEXQUERY_ZERO=0;
Pb_COMPLEXQUERY_MSGTYPE=	0x0000001;
Pb_COMPLEXQUERY_ROLE=		0x0000002;
Pb_COMPLEXQUERY_MEMBERID=	0x0000004;
Pb_COMPLEXQUERY_UTCTIME=	0x0000008;
}

//投票状态 votestate 
enum Pb_MeetVoteStatus
{
Pb_vote_notvote= 0; //未发起的投票
Pb_vote_voteing= 1; //正在进行的投票
Pb_vote_endvote= 2; //已经结束的投票
}

//maintype //投票 选举 调查问卷
enum Pb_MeetVoteType
{
Pb_VOTE_MAINTYPE_vote=			0; //投票
Pb_VOTE_MAINTYPE_election=		1; //选举
Pb_VOTE_MAINTYPE_questionnaire= 2; //问卷调查
}

//mode
enum Pb_MeetVoteMode
{
Pb_VOTEMODE_agonymous=	0; //匿名投票
Pb_VOTEMODE_signed=		1; //记名投票
}

//type
enum Pb_MeetVote_SelType
{
Pb_VOTE_TYPE_MANY=			    0; //多选
Pb_VOTE_TYPE_SINGLE=			1; //多选
Pb_VOTE_TYPE_4_5=			    2; //5选4
Pb_VOTE_TYPE_3_5=			    3; //5选2
Pb_VOTE_TYPE_2_5=			    4; //5选2
Pb_VOTE_TYPE_2_3=			    5; //3选2
}

//查询会议投票人属性信息
//property id
enum Pb_MeetVotePropertyID
{
Pb_MEETVOTE_PROPERTY_ZERO=0;
Pb_MEETVOTE_PROPERTY_HADSIGNIN=			    1; //按投票ID\人员ID返回是否已经投票 query(fixed32)
Pb_MEETVOTE_PROPERTY_SIGNINITEM=		    2; //按投票ID\人员ID返回投票项记录 //0x0001选择了选项一,0x0010选择了选项二 query(fixed32)
}

//查询会议签到属性信息
//property id
enum Pb_MeetSignPropertyID
{
Pb_MEETTSIGN_PROPERTY_ZERO=0;
Pb_MEETTSIGN_PROPERTY_HADSIGNIN=			    1; //按人员ID返回是否已经签到 query
Pb_MEETTSIGN_PROPERTY_SIGNINTYPE=			2; //按人员ID返回签到类型 query
}

//会议白板操作

//operflag
enum Pb_MeetPostilOperType
{
Pb_MEETPOTIL_FLAG_ZERO=0;
Pb_MEETPOTIL_FLAG_FORCEOPEN=	   1; //该标志表示需要强制执行批注白板强行打开
Pb_MEETPOTIL_FLAG_FORCECLOSE=	   2; //该标志表示需要强制执行批注白板强行关闭
Pb_MEETPOTIL_FLAG_REQUESTOPEN=	   3; //该标志表示有人发起白板
Pb_MEETPOTIL_FLAG_REJECTOPEN=	   4; //该标志表示对方拒绝打开白板
Pb_MEETPOTIL_FLAG_EXIT=			   5; //该标志表示有人离开白板
Pb_MEETPOTIL_FLAG_ENTER=		   6; //该标志表示有人进入白板
}

//白板操作类型
enum Pb_MeetPostilFigureType
{
Pb_WB_FIGURETYPE_ZERO=0;
Pb_WB_FIGURETYPE_INK=			1; //线条
Pb_WB_FIGURETYPE_LINE=		2; //直线
Pb_WB_FIGURETYPE_ELLIPSE=		3; //椭圆
Pb_WB_FIGURETYPE_RECTANGLE=	4; //矩形
Pb_WB_FIGURETYPE_FREETEXT=	5; //文字
Pb_WB_FIGURETYPE_PICTURE=		6; //
Pb_WB_FIGURETYPE_ARROW=		7; //箭头
}

//font flag
enum Pb_MeetFontFlag
{
Pb_WHITEBOARD_FONT_ZERO=0;
Pb_WHITEBOARD_FONT_STRIKEOUT= 0x01; //删除线
Pb_WHITEBOARD_FONT_BOLD=	  0x02; //加粗
Pb_WHITEBOARD_FONT_ITALIC=	  0x04; //倾斜
Pb_WHITEBOARD_FONT_UNDERLINE= 0x08; //下划线
}

//功能标识码
enum Pb_Meet_FunctionCode
{
Pb_MEET_FUNCODE_AGENDA_BULLETIN=	0;	//会议议程
Pb_MEET_FUNCODE_MATERIAL=		1;	//会议资料
Pb_MEET_FUNCODE_SHAREDFILE=		2;	//	共享文件
Pb_MEET_FUNCODE_POSTIL=			3;	//批注文件
Pb_MEET_FUNCODE_MESSAGE=			4;	//会议交流
Pb_MEET_FUNCODE_VIDEOSTREAM=		5;	//视频直播
Pb_MEET_FUNCODE_WHITEBOARD=		6;	//白板
Pb_MEET_FUNCODE_WEBBROWSER=		7;	//网页
Pb_MEET_FUNCODE_VOTERESULT=		8;	//投票
Pb_MEET_FUNCODE_SIGNINRESULT=	9;	//签到
Pb_MEET_FUNCODE_DOCUMENT=		10;	//外部文档
}

//媒体播放
//playflag
enum Pb_MeetPlayFlag
{
Pb_MEDIA_PLAYFLAG_ZERO=0;
Pb_MEDIA_PLAYFLAG_LOOP= 0x00000001; //循环播放标志
}

//会议界面设置
//faceid
enum Pb_MeetFaceID
{
Pb_MEET_FACEID_ZERO=0;
Pb_MEET_FACEID_MAINBG=			1;  //主界面 png  //仅ID
Pb_MEET_FACEID_SUBBG=			2;  //子界面 png  //仅ID
Pb_MEET_FACEID_LOGO=			3;  //logo png    //仅ID
Pb_MEET_FACEID_MEETNAME=		4;  //会议名称 text
Pb_MEET_FACEID_MEMBERNAME=		5;  //参会人名称 text
Pb_MEET_FACEID_MEMBERCOMPANY=	6;  //参会人单位 text
Pb_MEET_FACEID_MEMBERJOB=		7;  //参会人职业 text
Pb_MEET_FACEID_SEATNAME=		8;  //座席名称 text
Pb_MEET_FACEID_TIMER=			9;  //日期时间 text
Pb_MEET_FACEID_COMPANY=			10; //单位名称 text
Pb_MEET_FACEID_SHOWFILE=		11; //开会预读文件、视频等  //仅ID
Pb_MEET_FACEID_COLTDTEXT=		12; //公司名称 onytext
Pb_MEET_FACE_LOGO_GEO=		13; //text
Pb_MEET_FACE_topstatus_GEO=		14; //会议状态 text 
Pb_MEET_FACE_checkin_GEO=		15; //进入会议按钮 text
Pb_MEET_FACE_manage_GEO=		16; //进入后台 text
Pb_MEET_FACE_remark_GEO=		17; //备注 text
Pb_MEET_FACE_role_GEO=		18; //角色 text
Pb_MEET_FACE_ver_GEO=		19; //版本 text
Pb_MEET_FACE_SeatIcoShow_GEO=		20; //排位图标是否显示 text

Pb_MEET_FACEID_PROJECTIVE_MIANBG=		101;  //投影界面 png
Pb_MEET_FACEID_PROJECTIVE_LOGO=			102;  //logo png
Pb_MEET_FACEID_PROJECTIVE_MEETNAME=		103;  //会议名称 text
Pb_MEET_FACEID_PROJECTIVE_SEATNAME=		104;  //座席名称 text
Pb_MEET_FACEID_PROJECTIVE_TIMER=		105;  //日期时间 text
Pb_MEET_FACEID_PROJECTIVE_COMPANY=		106;  //单位名称 text
Pb_MEET_FACEID_PROJECTIVE_SHOWFILE=		107;  //开会预读文件、视频等  //仅ID
Pb_MEET_FACEID_PROJECTIVE_COLTDTEXT=	108;  //公司名称 onytext
}

//fontflag
enum Pb_MeetFaceFontFlag
{
Pb_MEET_FONTFLAG_ZERO=0;
Pb_MEET_FONTFLAG_BOLD=		0x00000001; //加粗
Pb_MEET_FONTFLAG_LEAN=		0x00000002; //倾斜
Pb_MEET_FONTFLAG_UNDERLINE= 0x00000004; //下划线
}

//flag
enum Pb_MeetFaceFlag
{
Pb_MEET_FACEFLAG_ZERO=0;
Pb_MEET_FACEFLAG_SHOW=			0x00000001; //该位用于表示该项是否可见
Pb_MEET_FACEFLAG_TEXT=			0x00000002; //该位用于表示数据是文本类型,否则为文件ID
Pb_MEET_FACEFLAG_ONLYTEXT=		0x00000004; //该位用于表示数据是纯文本类型
}

//时间段会议统计
//quartertype
enum Pb_MeetStatisticFlag
{
Pb_MEET_QUERYSTATISTIC_ZERO=0;
Pb_MEET_QUERYSTATISTIC_BYMONTH=	  1;//按月份查询,最多一次可查12个月
Pb_MEET_QUERYSTATISTIC_BYQUARTER= 2;//按季度查询,最多一次可查12个季度
Pb_MEET_QUERYSTATISTIC_BYYEAR=	  3;//按年查询,最多一次可查12个年
}

//时间段会议统计
//evaluate flag
enum Pb_FileEvaluateFlag
{
Pb_FILEEVALUATE_FLAG_ZERO=0;
Pb_FILEEVALUATE_FLAG_SECRETARY= 0x00000001; //该标志为1表示评价对外不可见
}

//系统保留使用的目录ID,用作特别用途
//uploadflag
/*enum Pb_Upload_DefaultDirId
{
Pb_MEET_UPDATE_SYSTEMDIRID_ZERO=0;
Pb_MEET_UPDATE_SYSTEMDIRID_CHANGELOGO=			0xffffffff;  //更换LOGO
Pb_MEET_UPDATE_SYSTEMDIRID_CHANGEMAINBG=		0xfffffffe;  //更换主界面
Pb_MEET_UPDATE_SYSTEMDIRID_CHANGEPROJECTIVEBG=	0xfffffffd;  //更换投影主界面
Pb_MEET_UPDATE_SYSTEMDIRID_END=					0xfffffff0; 
}*/

